# UiPilot_tools

./: .gitignore  index.html  package-lock.json  package.json  security-probe.html  tsconfig.json  vite.config.ts
docs/spikes/: 2026-07-17-systemindex-results.md  systemindex-evidence-protocol.md
docs/superpowers/plans/: 2026-07-17-systemindex-spike.md  2026-07-17-windows-launcher-foundation.md  2026-07-18-task-4a-settings-persistence.md  2026-07-18-task-4b-validation-store.md  2026-07-18-task-4c-validation-export-service.md  2026-07-19-foundation-task-5-search-launch-activation.md  2026-07-19-foundation-task-7-keyboard-first-launcher-ui.md  2026-07-20-find-local-file-search.md  2026-07-21-double-tap-hook-dynamic-save.md  2026-07-21-hotkey-recorder.md  2026-07-21-launcher-fixed-input-scroll-results.md  2026-07-21-tray-open-launcher.md  2026-07-21-windows-appsfolder-discovery.md  2026-07-22-internal-plugin-mvp.md  2026-07-22-launcher-application-icons.md  2026-07-22-remove-application-aliases.md  2026-07-22-settings-hotkey-immediate-persistence.md  2026-07-22-start-menu-top-level-shortcut-discovery.md  2026-07-22-window-drag-position-persistence.md  2026-07-23-double-tap-release-gate.md  2026-07-23-plugin-management-settings.md  2026-07-23-plugin-settings-scrollbar.md  2026-07-23-settings-instant-apply.md
docs/superpowers/specs/: 2026-07-17-cross-platform-launcher-mvp-design.md  2026-07-17-remove-file-search-from-mvp-a-design.md  2026-07-18-result-registry-contract-design.md  2026-07-18-security-gate-hardening-design.md  2026-07-18-start-menu-application-discovery-design.md  2026-07-18-task-4a-settings-persistence-design.md  2026-07-18-task-4b-validation-store-design.md  2026-07-18-task-4c-validation-export-service-design.md  2026-07-19-foundation-task-5-search-launch-activation-design.md  2026-07-19-foundation-task-7-keyboard-first-launcher-ui-design.md  2026-07-20-find-local-file-search-design.md  2026-07-20-internal-plugin-mvp-design.md  2026-07-21-double-tap-hook-main-thread-design.md  2026-07-21-hotkey-recorder-design.md  2026-07-21-launcher-application-icons-design.md  2026-07-21-launcher-fixed-input-scroll-results-design.md  2026-07-21-tray-open-launcher-design.md  2026-07-21-windows-appsfolder-discovery-design.md  2026-07-22-remove-application-aliases-design.md  2026-07-22-settings-hotkey-immediate-persistence-design.md  2026-07-22-start-menu-top-level-shortcut-discovery-design.md  2026-07-22-window-drag-position-persistence-design.md  2026-07-23-double-tap-release-gate-design.md  2026-07-23-plugin-management-settings-design.md  2026-07-23-plugin-settings-scrollbar-design.md  2026-07-23-settings-instant-apply-design.md
docs/superpowers/verification/: 2026-07-23-plugin-management-settings.md
examples/plugins/internal.math/: README.md  plugin.json  runtime.html  runtime.js  runtime.test.js
scripts/: build-security-probe.ps1  capture-systemindex-io.ps1  check-security-config.ps1  prepare-systemindex-sentinels.ps1  run-systemindex-spike.ps1  test-find-evidence.ps1  test-find-performance.ps1  test-security-config.ps1  test-security-probe.ps1  test-start-menu-boundary.ps1  test-systemindex-failfast.ps1
spikes/systemindex/: Cargo.toml
spikes/systemindex/src/: error.rs  lib.rs  main.rs  query.rs  scope.rs  windows_search.rs
spikes/systemindex/tests/: cli.rs  failfast.rs  query_boundaries.rs  scope_policy.rs  windows_search.rs
src/: hotkey-recorder.test.ts  hotkey-recorder.ts  launcher-core.ts  launcher-view.tsx  launcher.test.tsx  main.ts  native-input.ts  protocol.ts  security-probe.ts  styles.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.security-probe.conf.json
src-tauri/capabilities/: main.json  plugin-runtime.json
src-tauri/permissions/autogenerated/: clear_validation_data.toml  execute_result.toml  export_validation_data.toml  hide_launcher.toml  publish_plugin_results.toml  reload_plugin.toml  rescan_apps.toml  save_hotkey.toml  search_apps.toml  set_file_preview_preference.toml
src-tauri/src/: atomic_file.rs  commands.rs  double_tap.rs  hotkey.rs  hotkey_hook.rs  lib.rs  lifecycle.rs  main.rs  model.rs  plugins.rs  result_registry.rs  security_probe.rs  session_marker.rs  settings.rs  validation_data.rs  validation_export.rs
src-tauri/src/apps/: action.rs  appsfolder.rs  cache.rs  discovery.rs  icon.rs  mod.rs  rank.rs  shortcut.rs  windows_backend.rs
src-tauri/src/file_index/: mod.rs  store.rs  windows_backend.rs
