[package]
name = "uipilot"
version = "0.1.0"
description = "Keyboard-first Windows application launcher"
authors = []
license = ""
repository = ""
edition = "2021"
rust-version = "1.96.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "uipilot_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
test-instrumentation = []

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
icu_casemap = { version = "=1.5.1", default-features = false, features = ["compiled_data"] }
rusqlite = { version = "=0.40.1", default-features = false, features = ["bundled"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.11.3", features = ["tray-icon"] }
unicode-normalization = { version = "=0.1.23", default-features = false, features = ["std"] }
windows = { version = "0.61.3", features = [
  "Win32_Foundation",
  "Win32_Globalization",
  "Win32_Graphics_Gdi",
  "Win32_Graphics_Imaging",
  "Win32_Security_Cryptography",
  "Win32_Storage_EnhancedStorage",
  "Win32_Storage_FileSystem",
  "Win32_Storage_Packaging_Appx",
  "Win32_System_Com",
  "Win32_System_Com_StructuredStorage",
  "Win32_System_Diagnostics_ToolHelp",
  "Win32_System_IO",
  "Win32_System_SystemInformation",
  "Win32_System_Threading",
  "Win32_UI_Shell",
  "Win32_UI_Shell_Common",
  "Win32_UI_WindowsAndMessaging",
] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-single-instance = "2"
