[package]
name = "systemindex-spike"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_Search",
    "Win32_System_Services",
    "Win32_UI_Shell",
    "Win32_UI_Shell_PropertiesSystem",
] }
